--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,9 @@ html
       title test title
 
     body
-      block content
+
+      div(class="content")      
+        block content
 
       div(class="footer")
         p 2015 &copy; thaddeus reid stewart
