--- a/assets/css/_settings.styl
+++ b/assets/css/_settings.styl
@@ -11,14 +11,29 @@ $georgia = Georgia, Cambria, "Times New Roman", Times, serif
 $lucidia-grande = "Lucida Grande", Tahoma, Verdana, Arial, sans-serif
 $monospace = unquote("'Bitstream Vera Sans Mono', Consolas, Courier, monospace")
 $verdana = Verdana, Geneva, sans-serif
+$ubuntu = "Ubuntu", Helvetica, Arial, sans-serif
+$noto = "Noto Serif", $georgia
 
 // Default font settings
-$font-stack = $helvetica-neue
+$font-stack = $ubuntu
 $font-size = 16
-$font-color = #555
+$font-color = #0E0E0E
+
+// font sizes
+$text-xlarge = 48px
+$text-large = 32px
+$text-medium = 16px
+
+// spacing
+$space-xlarge = 60px
+$space-large = 40px
+$space-medium = 20px
+$space-small = 10px
+$space-xsmall = 5px
+
 
 // Colors (via http://clrs.cc - slightly modded)
-$navy     = #001F3F
+$navy     = #001f3f
 $blue     = #0074D9
 $aqua     = #7FDBFF
 $teal     = #39CCCC
@@ -27,14 +42,14 @@ $green    = #2ECC40
 $lime     = #01FF70
 $yellow   = #FFDC00
 $orange   = #FF851B
-$red      = #D13F19
-$maroon   = #85144B
+$red      = #FF4136
+$maroon   = #85144b
 $fuchsia  = #F012BE
 $purple   = #B10DC9
 $white    = #FFFFFF
-$silver   = #DDDDDD
+$silver   = #111111
 $gray     = #AAAAAA
-$black    = #222222
+$black    = #0E0E0E
 
 // Use as default HTML colors
 navy    = $navy
@@ -56,13 +71,16 @@ gray    = $gray
 black   = $black
 
 // Default color
-$default-color = $blue
+$default-color = $red
 
 // Text highlight color
-$highlight-color = $blue
+$highlight-color = $red
 
 // Custom image base path for axis mixins
 $img-path = '/img/'
 
 // Ligatures
 $ligatures = false
+
+// layout
+$container-width-max = 580px
