updated package.json version, styles

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -69,6 +69,9 @@ body
   .wrapper
     padding-bottom: $space-xlarge*4
 
+    &:last-child
+      padding-bottom: $space-xlarge*2
+
   .separator
     height: $space-large
     
