--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -36,6 +36,14 @@ body
     color: $black
     text-decoration: none
     
+    h3
+      color: $black
+      font-weight: normal
+      
+      &:hover,
+      &:focus
+        color: $red
+    
     &:hover,
     &:focus
       color: $red
