--- a/views/index.jade
+++ b/views/index.jade
@@ -18,11 +18,15 @@ block content
     div(class="projects")
 
       each project in site.projects
-        div(class="project")
-          div(class="header")
-            h3= project.title
-          != project.content
-          p= project.collaborators
+        unless project.isDraft
+          div(class="project")
+            div(class="header")
+              a(href=project.url title=project.title target="_blank"): h3=project.title
+            //- != project.content
+            //- if project.collaborators
+              each collab in project.collaborators
+                a(href=collab.url)= collab.name
+            
 
     //- a(href="#" class="button") see more
 
