todo update and content cleanup

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   div(class="wrapper")
     h1 Thaddeus Reid
     h4
-      em Flagtaff, Arizona
+      em Flagstaff, Arizona
 
     p.
       Hola, I'm a front end web developer with an interest in computers, design, filmmaking, homebrewing, and many other amazing forms of art/life. I would love to hear from you whether you're wanting to build something or have a great song to share.
