--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html
     != css()
 
     block title
-      title test title
+      title thaddeus reid | web developer and designer living in flagstaff, arizona
 
     body
 
