--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     meta(name='author', content= "Thaddeus Reid")
     //- uncomment if your site is responsive!
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    meta(name="google-site-verification" content="nwyzSATa9wEFljRQ7y7n56XrHv0Sc164-IUgTop2nU4")
 
     != css()
 
