fixed twitter link

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,4 +37,4 @@ block content
 
     div(class="social-links")
       a(href="https://github.com/thaddeusreid" class="social-github")
-      a(href="https://twitter.com/thaddeusreid" class="social-twitter")
+      a(href="https://twitter.com/thaddeus_reid" class="social-twitter")
