revised site description

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
       em Flagstaff, Arizona
 
     p.
-      Hola, I'm a front end web developer with an interest in computers, design, filmmaking, homebrewing, and many other amazing forms of art/life. I would love to hear from you whether you're wanting to build something or have a great song to share.
+      Hi, I'm a developer who builds clean, reponsive websites and web applications. I enjoy the occasional craft/home brew, filmmaking, and hiking with my wife and our dog. If you're interested in building something together, don't hesitate to give me a shout.
 
     a(href="#contact" class="button") get in touch
 
