--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -48,6 +48,9 @@ body
     &:focus
       color: $red
 
+  .logo
+    max-width: 75px
+
   .button
     display: block
     text-transform: uppercase
