--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,8 @@ html
 
     body
 
-      div(class="content")      
+      div(class="content")
+        img(src="img/logo2.png", alt="thaddeus reid's logo" class="logo")
         block content
 
       div(class="footer")
