hide logo, modify intro text, add _blank target to social links

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -278,6 +278,7 @@ body .footer p {
   margin: 0px;
 }
 body .wrapper {
+  padding-top: 60px;
   padding-bottom: 240px;
 }
 body .wrapper:last-child {
