--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
       em Flagstaff, Arizona
 
     p.
-      Hi, I'm a developer who builds clean, reponsive websites and web applications. I enjoy the occasional craft/home brew, filmmaking, and hiking with my wife and our dog. If you're interested in building something together, don't hesitate to give me a shout.
+      Hi, I'm a developer who builds reponsive websites and web applications. If you're interested in building something together, give me a shout.
 
     a(href="#contact" class="button") get in touch
 
@@ -36,5 +36,5 @@ block content
     a(href="mailto:hello@thaddeusreid.com") hello@thaddeusreid.com
 
     div(class="social-links")
-      a(href="https://github.com/thaddeusreid" class="social-github")
-      a(href="https://twitter.com/thaddeus_reid" class="social-twitter")
+      a(href="https://github.com/thaddeusreid" class="social-github" target="_blank")
+      a(href="https://twitter.com/thaddeus_reid" class="social-twitter" target="_blank")
