--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html
     body
 
       div(class="content")
-        img(src="img/logo2.png", alt="thaddeus reid's logo" class="logo")
+        //- img(src="img/logo2.png", alt="thaddeus reid's logo" class="logo")
         block content
 
       div(class="footer")
