--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,6 @@ extends layout
 
 block content
   div(class="wrapper")
-    h1 Thaddeus Reid
     h4
       em Flagstaff, Arizona
 
@@ -15,13 +14,17 @@ block content
   div(class="wrapper")
     h2 Projects
 
-    div(class="projects")
+    div(id="projects" class="projects")
 
-      each project in site.projects
+      
+      each project in site.projects.reverse()
         unless project.isDraft
           div(class="project")
             div(class="header")
-              a(href=project.url title=project.title target="_blank"): h3=project.title
+              if project.isSingle
+                a(href=project._url title=project.title): h3=project.title
+              else
+                a(href=project.url title=project.title): h3=project.title                
             //- != project.content
             //- if project.collaborators
               each collab in project.collaborators
@@ -37,4 +40,4 @@ block content
 
     div(class="social-links")
       a(href="https://github.com/thaddeusreid" class="social-github" target="_blank")
-      a(href="https://twitter.com/thaddeus_reid" class="social-twitter" target="_blank")
+      //- a(href="https://twitter.com/thaddeus_reid" class="social-twitter" target="_blank")
