--- a/views/_single.jade
+++ b/views/_single.jade
@@ -7,7 +7,7 @@ html
     meta(name='author', content= "author of the site")
 
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title= _path
+    title= post.title + ' wesite by thaddeus reid | web developer and designer'
     != css('/')
 
   body
