fix index description typo

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
       em Flagstaff, Arizona
 
     p.
-      Hi, I'm a developer who builds reponsive websites and web applications. If you're interested in building something together, give me a shout.
+      Hi, I'm a developer who builds responsive websites and web applications. If you're interested in building something together, give me a shout.
 
     a(href="#contact" class="button") get in touch
 
