project updates, linked in footer

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -9,16 +9,16 @@ body
   text-align: center
   background-color: $white
   color: $black
-  
+
 
   h1
     font-size: $text-xlarge
     color: $red
     margin-bottom: $space-small
-    
+
     a
       color: $red
-      
+
       &:hover,
       &:focus
         color: $black
@@ -34,11 +34,11 @@ body
   h4
     color: $red
     margin: 0px 0px $space-medium
-    
+
   p
     margin-bottom: $space-large
     line-height: 28px
-    
+
     a
       border-bottom: 1px $black dotted
 
@@ -49,15 +49,15 @@ body
   a
     color: $black
     text-decoration: none
-    
+
     h3
       color: $black
       font-weight: normal
-      
+
       &:hover,
       &:focus
         color: $red
-    
+
     &:hover,
     &:focus
       color: $red
@@ -74,7 +74,7 @@ body
     background-color: transparent
     border: 1px solid $red
     color: $red
-    max-width: 200px    
+    max-width: 200px
 
     &:hover,
     &:focus
@@ -100,25 +100,25 @@ body
 
   .separator
     height: $space-large
-    
+
   .projects
     margin-bottom: $space-large
-    
+
     .project
       margin-bottom: $space-medium
-      
+
       p
         margin-top: 0px;
         margin-bottom: $space-xsmall
-    
+
   // util
   .center
     text-align: center
-  
+
 
   .social-links
     margin: $space-medium 0 0
-    
+
     a
       margin: 0 $space-small
 
@@ -130,4 +130,7 @@ body
       &:before
         fa-icon("twitter");
         font-size: $text-large
-
+    .social-linkedin
+      &:before
+        fa-icon("linkedin");
+        font-size: $text-large
