--- a/projects/15-10-mountain-sports-flagstaff.jade
+++ b/projects/15-10-mountain-sports-flagstaff.jade
@@ -1,13 +1,14 @@
 ---
 title: 'Mountain Sports Flagstaff'
 url: 'http://mountainsportsflagstaff.com/'
-collaborators: []
+isSingle: true
 isDraft: false
-_render: false
+_content: false
 ---
 
 extends ../views/_single
 
 block content
 
-	:markdown
+  :marked
+    Located in the heart of downtown, Mountain Sports Flagstaff is an established local retail business and advocate for outdoor activities in Northern Arizona. The website is built on Wordpress and utilizes the frequent Instagram feed of owner Lisa Lamberson. In addition to business details, history, and team profile is a an online store for swag, fundraisers, and other lifestyle products.
