--- a/projects/16-01-karma-sushi.jade
+++ b/projects/16-01-karma-sushi.jade
@@ -11,6 +11,6 @@ extends ../views/_single
 block content
 
 	:markdown
-		Sashimi, seaweed salad, and hot sake...an incredible treat in the high desert. I worked with the wonderful [Darcy Falk](http://darcyfalk.com/), [Jen Saunders](http://www.jensaunders.com), and [Darryl Brown](http://www.2bdesign.com) to bring the responsive website to production. 
+		Sashimi, seaweed salad, and sake...an incredible treat in the high desert. I collaborated with the wonderful [Darcy Falk](http://darcyfalk.com/), [Jen Saunders](http://www.jensaunders.com), and [Darryl Brown](http://www.2bdesign.com) to bring the responsive website to production.
 
-		Built with the Yii Framework and now maintained solely by myself. Besides monthly marketing and performance maintenance, I built a secure employee portal for job orientation and training.
+		Built with Yii, a Rails-like PHP MVC application framework, this project began as a customer-facing platform for practical, business related information. After it's release in early 2015, I continue to maintain the website and introduce new features such as an employee portal for job orientation, training, and communication.
