publish: project updates, linked in footer
generated from commit 4884f5244bb0cd72d683e9a005d1c6d43b951ff9

--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,6 @@
 body .social-links .social-github:before,
-body .social-links .social-twitter:before {
+body .social-links .social-twitter:before,
+body .social-links .social-linkedin:before {
   line-height: 1em;
   font-family: "FontAwesome";
   font-weight: normal;
@@ -326,5 +327,9 @@ body .social-links .social-github:before {
 }
 body .social-links .social-twitter:before {
   content: "\f099";
+  font-size: 32px;
+}
+body .social-links .social-linkedin:before {
+  content: "\f0e1";
   font-size: 32px;
 }
