updated location, new project templates

--- a/projects/15-07-ecoss.jade
+++ b/projects/15-07-ecoss.jade
@@ -1,13 +1,14 @@
 ---
 title: 'Ecoss'
 url: 'http://ecoss.nau.edu'
-collaborators: []
+isSingle: false
 isDraft: false
-_render: false
+_content: false
 ---
 
 extends ../views/_single
 
 block content
 
-	:markdown
+  :markdown
+    The Center for Ecosystem Science and Society is an environmental research department at Northern Arizona University. Originally built in the Spring of 2015, this is a Wordpress website with a number of custom plugins to manage their dynamic content pipeline.
