--- a/projects/16-01-flg-terroir.jade
+++ b/projects/16-01-flg-terroir.jade
@@ -1,8 +1,8 @@
 ---
-title: 'Title'
-url: 'http://thaddeusreid.com'
+title: 'FLG Terrior'
+url: 'http://www.flgterroir.com/'
 isSingle: false
-isDraft: true
+isDraft: false
 _content: false
 ---
 
