--- a/projects/16-04-earth-color.jade
+++ b/projects/16-04-earth-color.jade
@@ -1,8 +1,8 @@
 ---
-title: 'Title'
-url: 'http://thaddeusreid.com'
+title: 'Earth Color'
+url: 'http://earthcolor.com'
 isSingle: false
-isDraft: true
+isDraft: false
 _content: false
 ---
 
