--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   div(class="wrapper")
     h4
-      em Flagstaff, Arizona
+      em Portland, OR
 
     p.
       Hi, I'm a developer who builds responsive websites and web applications. If you're interested in building something together, give me a shout.
