--- a/projects/16-03-the-arboretum-at-flagstaff.jade
+++ b/projects/16-03-the-arboretum-at-flagstaff.jade
@@ -1,8 +1,8 @@
 ---
-title: 'Title'
-url: 'http://thaddeusreid.com'
+title: 'The Arboretum at Flagstaff'
+url: 'http://www.thearb.org'
 isSingle: false
-isDraft: true
+isDraft: false
 _content: false
 ---
 
