--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,26 +5,26 @@ html
     meta(charset='utf8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
     meta(name="google-site-verification" content="nwyzSATa9wEFljRQ7y7n56XrHv0Sc164-IUgTop2nU4")
-    meta(name='description', content='Thaddeus Reid is a web developer, designer, and homebrew wizard living in Flagstaff, Arizona. Want to build something togther? Take a peek at his portfolio and leave a message.')
-    meta(name='author', content= "Thaddeus Reid")
+    meta(name='description', content='thaddeus reid is a javascript developer living in portland, oregon.')
+    meta(name='author', content= "thaddeus reid")
     //- uncomment if your site is responsive!
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
     != css('/')
 
     block title
-      title thaddeus reid | web developer and designer living in flagstaff, arizona
+      title thaddeus reid | javascript developer | portland, oregon
 
     body
 
       div(class="content")
         h1 Thaddeus Reid
+        h4
+          em Portland, OR
         //- img(src="img/logo2.png", alt="thaddeus reid's logo" class="logo")
         block content
 
       div(class="footer")
-        p 2016
+        p 2017
 
       != js('/')
-
-
