--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -96,7 +96,8 @@ body
     padding-bottom: $space-xlarge*4
 
     &:last-child
-      padding-bottom: $space-xlarge*2
+      padding-top: 0
+      padding-bottom: $space-medium
 
   .separator
     height: $space-large
