--- a/views/index.jade
+++ b/views/index.jade
@@ -1,13 +1,15 @@
 extends layout
 
 block content
-  //- div(class="wrapper")
+  div(class="wrapper")
     p.
-      Hi, I'm a developer who builds responsive websites and web applications. Things are a bit busy
+      Hello! I'm a developer specialized in building full-stack Javascript applications for the web. When I'm not tinkering on a server, updating component state, or running unit tests, you can catch me riding my bike, climbing rocks, and hanging out at the river with my friends.
+    p.
+      Currently not accepting any side-projects at the moment... but it never hurts to reach out with an idea! Or feel free to holler if you want to get outside and have some fun.
 
     //- a(href="#contact" class="button") get in touch
 
-  div(class="wrapper")
+  //- div(class="wrapper")
     h2 Projects
 
     div(id="projects" class="projects")
