--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,10 +2,7 @@ extends layout
 
 block content
   div(class="wrapper")
-    p.
-      Hello! I'm a developer specialized in building full-stack Javascript applications for the web. When I'm not tinkering on a server, updating component state, or running unit tests, you can catch me riding my bike, climbing rocks, and hanging out at the river with my friends.
-    p.
-      Currently not accepting any side-projects at the moment... but it never hurts to reach out with an idea! Or feel free to holler if you want to get outside and have some fun.
+    p Website currently under development. Check back later!
 
     //- a(href="#contact" class="button") get in touch
 
@@ -27,4 +24,4 @@ block content
 
     //- a(href="#" class="button") see more
 
-  include footer
+  //- include footer
