remove red, update status

--- a/src/assets/css/master.styl
+++ b/src/assets/css/master.styl
@@ -6,7 +6,7 @@ base()
 fa-font()
 
 body
-  padding: $space-large $space-large $space-small
+  padding: $space-xlarge $space-large $space-small
   text-align: center
   background-color: $white
   color: $black
@@ -14,7 +14,7 @@ body
 
   h1
     font-size: $text-xlarge
-    color: $red
+    // color: $red
     margin-bottom: $space-small
 
     a
@@ -26,14 +26,14 @@ body
 
   h2
     font-size: $text-large
-    color: $red
+    // color: $red
 
   h3
-    color: $red
+    // color: $red
     margin: 0px 0px $space-xsmall
 
   h4
-    color: $red
+    // color: $red
     margin: 0px 0px $space-medium
 
   p
