--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -2,4 +2,5 @@ extends ../layout/main
 
 block content
   div(class="wrapper")
-    p Website currently under development. Check back later!
+    p JavaScript Wizard. Rock Scrambler.
+    p 🔥
