--- a/src/views/layout/main.pug
+++ b/src/views/layout/main.pug
@@ -14,18 +14,17 @@ html
     link(rel="stylesheet" href="styles.css")
 
     block title
-      title thaddeus reid | javascript developer | portland, oregon
+      title thaddeus reid | javascript developer
 
   body
 
     div(class="content")
       h1 Thaddeus Reid
-      h4
-        em Portland, OR
-      //- img(src="img/logo2.png", alt="thaddeus reid's logo" class="logo")
+      p floating around the interweb!
+
       block content
 
     div(class="footer")
-      p 2017
+      p 2018
 
     //- != js('/')
